@@ -20,6 +20,7 @@
  400814 unable to mark some groups as read (Christophe)
  403066 getting new groups, conditional jump on uninitialised value (Charles)
  402704 queue size too small in task-pane.cc (Shana)
+ 389817 article not shown if another DL in progress (Samuli Karkkainen)
 
 0.121 "Dortmunder"
  390784 crash when dragging over URL (Paul Williamson)
